section 2 and section 3

--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -20,3 +20,13 @@
     height: 48px;
     cursor: pointer;
 }
+
+%center-image-button {
+    position: absolute;
+    border-radius: 19px;
+    border: none;
+    width: 132px;
+    height: 38px;
+    font-weight: 400;
+    font-size: 16px;
+}
