--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,8 +37,6 @@ samp,
 small,
 strike,
 strong,
-sub,
-sup,
 tt,
 var,
 b,
@@ -176,15 +174,14 @@ body {
   cursor: pointer;
 }
 
-#home #banner .banner .contact-us, #home #banner .banner .banner-info .how-we-work {
-  color: #fff;
-  border-radius: 6px;
-  text-transform: uppercase;
-  background-color: #ef6d58;
+#section2 .bottom .bottom-right-image button, #section2 .bottom .bottom-left-image button, #section2 .top .top-right-image button, #section2 .top .top-left-image button, #section1 .center .center-first button {
+  position: absolute;
+  border-radius: 19px;
   border: none;
-  width: 154px;
-  height: 48px;
-  cursor: pointer;
+  width: 132px;
+  height: 38px;
+  font-weight: 400;
+  font-size: 16px;
 }
 
 #header {
@@ -310,238 +307,247 @@ body {
     margin-top: 43px;
   }
 }
-#home #banner {
-  background-color: #312B49;
-}
-#home #banner .banner {
-  padding: 8vh 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#home #banner .banner .banner-info {
-  position: relative;
-  width: 50%;
-}
-#home #banner .banner .banner-info h5 {
-  color: #ef6d58;
-  font-size: 1rem;
-  text-transform: uppercase;
-}
-#home #banner .banner .banner-info h1 {
-  font-weight: 800;
-  line-height: 80px;
-  color: #fff;
-  max-width: 513px;
-  z-index: 2;
-  position: relative;
-}
-#home #banner .banner .banner-info p {
-  font-size: 16px;
-  line-height: 32px;
-  color: rgba(255, 255, 255, 0.64);
-}
-#home #banner .banner .banner-image {
-  width: 50%;
-}
-#home #banner .banner .banner-image img {
-  width: 100%;
-}
-#home #banner .banner .contact-us {
-  background-color: transparent;
-  text-transform: capitalize;
-}
-#home #banner .banner .star {
-  position: absolute;
-  top: 5%;
-  z-index: 1;
-}
-#home #banner .banner .message {
-  margin-top: 8vh;
-  display: flex;
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-}
-#home #banner .banner .message .message-content p {
-  font-size: 16px;
-  line-height: 32px;
-  color: rgba(255, 255, 255, 0.64);
-  margin: 0;
-}
-#home #banner .banner .message .message-content .person-name {
-  color: #fff;
-  margin-left: 5px;
-}
-@media only screen and (max-width: 992px) {
-  #home #banner .banner {
-    flex-direction: column-reverse;
-  }
-  #home #banner .banner .banner-info {
-    width: 100%;
-  }
-  #home #banner .banner .banner-info .star {
-    display: none;
-  }
-  #home #banner .banner .banner-image {
-    width: 100%;
-  }
-}
-#home #partners {
+#section1 {
   background-color: #FDF0E9;
+  width: 100%;
+  position: relative;
 }
-#home #partners .partners {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 76px 0;
-  border-bottom: 1px solid #f3d1bf;
+#section1 .center .center-first .image {
+  margin: 0 auto;
+  position: relative;
+  background-image: url("../images/keyboard.svg");
+  width: 1170px;
+  height: 720px;
+  background-size: cover;
 }
 @media only screen and (max-width: 992px) {
-  #home #partners .partners {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 24px 41px;
+  #section1 .center .center-first .image {
+    margin-left: 0;
+    width: 100%;
+  }
+}
+#section1 .center .center-first button {
+  bottom: 150px;
+  left: 220px;
+  cursor: pointer;
+}
+@media only screen and (max-width: 992px) {
+  #section1 .center .center-first button {
+    left: 28px;
+  }
+}
+#section1 .center .center-first h2 {
+  position: absolute;
+  width: 271px;
+  height: 64px;
+  bottom: 60px;
+  left: 220px;
+  color: #FFFFFF;
+}
+@media only screen and (max-width: 992px) {
+  #section1 .center .center-first h2 {
+    left: 28px;
+    bottom: 51px;
   }
 }
 
 #section2 {
   background-color: #FDF0E9;
   width: 100%;
+}
+#section2 .top {
   display: flex;
+  justify-content: center;
+  gap: 30px;
+  width: 100%;
 }
-#section2 .left-section2 {
-  width: 50%;
-  margin-left: 10%;
-  padding-top: 4%;
-  padding-bottom: 4%;
+#section2 .top .top-left-image {
+  padding-top: 32px;
+  position: relative;
 }
-#section2 .right-section2 .header-section2 {
-  color: #EF6D58;
-  width: 50%;
-  padding-top: 30%;
-  padding-bottom: 20px;
+#section2 .top .top-left-image .image {
+  width: 570px;
+  height: 416px;
+  background-image: url("../images/sofa.svg");
 }
-#section2 .right-section2 .content {
-  padding-bottom: 26px;
-}
-#section2 .right-section2 h2 {
-  width: 417px;
-  font-weight: 800;
-  font-size: 56px;
-  color: #391400;
-}
-#section2 .right-section2 .section2-text {
-  font-weight: 400;
-  font-size: 20px;
-  padding-bottom: 18px;
-}
-#section2 .right-section2 .section2-text2 {
-  font-weight: 400;
-  font-size: 16px;
-  padding-bottom: 34px;
-  line-height: 32px;
-  width: 470px;
-}
-#section2 .right-section2 button {
-  background: #FFFFFF;
-  box-shadow: 0px 3px 9px rgba(57, 20, 0, 0.08);
-  border-radius: 6px;
-  border: none;
-  width: 138px;
-  height: 48px;
-  font-weight: 900;
-  font-size: 14px;
+#section2 .top .top-left-image button {
+  position: absolute;
+  left: 48px;
+  bottom: 130px;
   cursor: pointer;
 }
 @media only screen and (max-width: 992px) {
-  #section2 {
+  #section2 .top .top-left-image button {
+    left: 28px;
+  }
+}
+#section2 .top .top-left-image h2 {
+  position: absolute;
+  left: 48px;
+  bottom: 50px;
+  color: #FFFFFF;
+}
+@media only screen and (max-width: 992px) {
+  #section2 .top .top-left-image h2 {
+    left: 28px;
+  }
+}
+@media only screen and (max-width: 992px) {
+  #section2 .top .top-left-image .image {
+    width: 100%;
+    background-repeat: no-repeat;
+  }
+}
+#section2 .top .top-right-image {
+  position: relative;
+  padding-top: 32px;
+}
+#section2 .top .top-right-image .image {
+  width: 570px;
+  height: 416px;
+  background-image: url("../images/workmedia.svg");
+}
+#section2 .top .top-right-image button {
+  position: absolute;
+  left: 48px;
+  bottom: 130px;
+  cursor: pointer;
+}
+@media only screen and (max-width: 992px) {
+  #section2 .top .top-right-image button {
+    left: 28px;
+  }
+}
+#section2 .top .top-right-image h2 {
+  position: absolute;
+  left: 48px;
+  bottom: 50px;
+  color: #FFFFFF;
+}
+@media only screen and (max-width: 992px) {
+  #section2 .top .top-right-image h2 {
+    left: 28px;
+  }
+}
+@media only screen and (max-width: 992px) {
+  #section2 .top .top-right-image .image {
+    width: 100%;
+    background-repeat: no-repeat;
+  }
+}
+@media only screen and (max-width: 992px) {
+  #section2 .top {
     flex-direction: column;
   }
-  #section2 .right-section2 .header-section2 {
-    padding-top: 5%;
+}
+#section2 .bottom {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  width: 100%;
+}
+#section2 .bottom .bottom-left-image {
+  padding-top: 32px;
+  position: relative;
+}
+#section2 .bottom .bottom-left-image .image {
+  width: 570px;
+  height: 416px;
+  background-image: url("../images/dddone.svg");
+}
+#section2 .bottom .bottom-left-image button {
+  position: absolute;
+  left: 48px;
+  bottom: 130px;
+  cursor: pointer;
+}
+@media only screen and (max-width: 992px) {
+  #section2 .bottom .bottom-left-image button {
+    left: 28px;
   }
-  #section2 .left-section2 {
-    margin-left: 0%;
+}
+#section2 .bottom .bottom-left-image h2 {
+  position: absolute;
+  left: 48px;
+  bottom: 50px;
+  color: #FFFFFF;
+}
+@media only screen and (max-width: 992px) {
+  #section2 .bottom .bottom-left-image h2 {
+    left: 28px;
   }
 }
-
-.boxs {
-  display: flex;
-  padding-top: 100px;
-  padding-left: 135px;
-  padding-right: 135px;
-  background-color: #FDF0E9;
+@media only screen and (max-width: 992px) {
+  #section2 .bottom .bottom-left-image .image {
+    width: 100%;
+    background-repeat: no-repeat;
+  }
 }
-.boxs .box {
+#section2 .bottom .bottom-right-image {
+  position: relative;
+  padding-top: 32px;
+}
+#section2 .bottom .bottom-right-image .image {
+  width: 570px;
+  height: 416px;
+  background-image: url("../images/handp.svg");
+}
+#section2 .bottom .bottom-right-image button {
+  position: absolute;
+  left: 48px;
+  bottom: 130px;
+  cursor: pointer;
+}
+@media only screen and (max-width: 992px) {
+  #section2 .bottom .bottom-right-image button {
+    left: 28px;
+  }
+}
+#section2 .bottom .bottom-right-image h2 {
+  position: absolute;
+  left: 48px;
+  bottom: 50px;
+  color: #FFFFFF;
+}
+@media only screen and (max-width: 992px) {
+  #section2 .bottom .bottom-right-image h2 {
+    left: 28px;
+  }
+}
+@media only screen and (max-width: 992px) {
+  #section2 .bottom .bottom-right-image .image {
+    width: 100%;
+    background-repeat: no-repeat;
+  }
+}
+@media only screen and (max-width: 992px) {
+  #section2 .bottom {
+    flex-direction: column;
+    background-repeat: no-repeat;
+  }
+}
+#section2 .btns {
   width: 100%;
-  height: 176px;
-  border: 2px solid #F3D1BF;
-}
-.boxs .box .faiz,
-.boxs .box .section3-text {
-  margin: 48px 0 0 40px;
-}
-.boxs .box .section3-text {
-  margin: 12px 0 0 40px;
-}
-
-#section3 {
-  display: flex;
-  background-color: #FDF0E9;
-  width: 100%;
-}
-#section3 .section3-left {
-  padding-left: 135px;
-  margin-top: 140px;
-}
-#section3 .section3-left .header-section3 {
-  color: #EF6D58;
-}
-#section3 .section3-left .center {
-  width: 448px;
-  height: 96px;
-  font-weight: 800;
-  font-size: 40px;
-  line-height: 48px;
-  margin-top: 17px;
-}
-#section3 .section3-left .text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 32px;
-  width: 470px;
-  height: 68px;
-  margin-top: 31px;
-}
-#section3 .section3-left .read {
-  color: #391400;
-  margin-top: 28px;
-  color: #391400;
-}
-#section3 .section3-right {
-  width: 50%;
-  margin-top: 180px;
-  margin-left: 130px;
-}
-#section3 .section3-right .right {
-  width: 100%;
-}
-#section3 .section3-right .first {
-  margin-top: 32px;
-  display: flex;
-}
-#section3 .section3-right .first .left {
-  font-weight: 800;
-  font-size: 72px;
-}
-#section3 .section3-right .first .text {
-  margin-left: 66px;
-  font-weight: 700;
-  font-size: 24px;
-  color: #391400;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 98px;
+  gap: 10px;
+}
+#section2 .btns button {
+  width: 48px;
+  height: 48px;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 14px;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: #FFFFFF;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+#section2 .btns button:hover {
+  background-color: #ef6d58;
+  color: #FFFFFF;
 }/*# sourceMappingURL=main.css.map */
