--- a/assets/sass/pages/home/_home.scss
+++ b/assets/sass/pages/home/_home.scss
@@ -1,126 +1,49 @@
-// @import "./variables";
-// @import "./mixins";
-// @import "./button";
+#section1 {
+    background-color: $bg-color;
+    width: 100%;
+    position: relative;
 
-#home {
+    .center {
 
-    // banner section
-    #banner {
-        background-color: $secondary-color;
+        .center-first {
 
-        .banner {
-            padding: 8vh 0;
-            @include flexBox();
-
-            .banner-info {
+            .image {
+                margin: 0 auto;
                 position: relative;
-                width: 50%;
+                background-image: url("../images/keyboard.svg");
+                width: 1170px;
+                height: 720px;
+                background-size: cover;
 
-                h5 {
-                    color: $primary-color;
-                    font-size: 1rem;
-                    text-transform: uppercase;
-                }
-
-                h1 {
-                    font-weight: 800;
-                    // font-size: 72px;
-                    line-height: 80px;
-                    color: $color-white;
-                    max-width: 513px;
-                    z-index: 2;
-                    position: relative;
-                }
-
-                p {
-                    font-size: 16px;
-                    line-height: 32px;
-                    color: rgba(255, 255, 255, 0.64);
-                }
-
-                .how-we-work {
-                    @extend %secondary-button;
-                }
-            }
-
-            .banner-image {
-                width: 50%;
-
-                img {
+                @media only screen and (max-width: 992px) {
+                    margin-left: 0;
                     width: 100%;
                 }
             }
 
-            .contact-us {
-                @extend %secondary-button;
-                background-color: transparent;
-                text-transform: capitalize;
+            button {
+                @extend %center-image-button;
+                bottom: 150px;
+                left: 220px;
+                cursor: pointer;
+
+                @media only screen and (max-width: 992px) {
+                    left: 28px;
+                }
             }
 
-            .star {
+            h2 {
                 position: absolute;
-                top: 5%;
-                z-index: 1;
-            }
+                width: 271px;
+                height: 64px;
+                bottom: 60px;
+                left: 220px;
+                color: #FFFFFF;
 
-            .message {
-                margin-top: 8vh;
-                display: flex;
-                column-gap: 1rem;
-
-                .message-content {
-                    p {
-                        font-size: 16px;
-                        line-height: 32px;
-                        color: rgba(255, 255, 255, 0.64);
-                        margin: 0;
-                    }
-
-                    .person-name {
-                        color: $color-white;
-                        margin-left: 5px;
-                    }
+                @media only screen and (max-width: 992px) {
+                    left: 28px;
+                    bottom: 51px;
                 }
-            }
-        }
-
-        @media only screen and (max-width: 992px) {
-            .banner {
-                flex-direction: column-reverse;
-
-                .banner-info {
-                    width: 100%;
-
-                    // h1 {
-                    //     font-size: 56px;
-                    // }
-                    .star {
-                        display: none;
-                    }
-                }
-
-                .banner-image {
-                    width: 100%;
-                }
-            }
-        }
-    }
-
-    //partners section
-    #partners {
-        background-color: $bg-color;
-
-        .partners {
-            @include flexBox(space-between);
-            flex-wrap: wrap;
-            padding: 76px 0;
-            border-bottom: 1px solid #f3d1bf;
-        }
-
-        @media only screen and (max-width: 992px) {
-            .partners {
-                @include flexBox(center);
-                gap: 24px 41px;
             }
         }
     }
@@ -130,173 +53,230 @@
 // section2
 
 #section2 {
-    background-color: #FDF0E9;
+    background-color: $bg-color;
     width: 100%;
-    display: flex;
 
-    .left-section2 {
-        width: 50%;
-        margin-left: 10%;
-        padding-top: 4%;
-        padding-bottom: 4%;
+    .top {
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+        width: 100%;
+
+        .top-left-image {
+            padding-top: 32px;
+            position: relative;
+
+            .image {
+                width: 570px;
+                height: 416px;
+                background-image: url("../images/sofa.svg");
+            }
+
+            button {
+                @extend %center-image-button;
+                position: absolute;
+                left: 48px;
+                bottom: 130px;
+                cursor: pointer;
+
+                @media only screen and (max-width: 992px) {
+                    left: 28px;
+                }
+            }
+
+            h2 {
+                position: absolute;
+                left: 48px;
+                bottom: 50px;
+                color: #FFFFFF;
+
+                @media only screen and (max-width: 992px) {
+                    left: 28px;
+                }
+            }
+
+            @media only screen and (max-width: 992px) {
+                .image {
+                    width: 100%;
+                    background-repeat: no-repeat;
+                }
+            }
+
+        }
+
+
+        .top-right-image {
+            position: relative;
+            padding-top: 32px;
+
+            .image {
+                width: 570px;
+                height: 416px;
+                background-image: url("../images/workmedia.svg");
+            }
+
+            button {
+                @extend %center-image-button;
+                position: absolute;
+                left: 48px;
+                bottom: 130px;
+                cursor: pointer;
+
+                @media only screen and (max-width: 992px) {
+                    left: 28px;
+                }
+            }
+
+            h2 {
+                position: absolute;
+                left: 48px;
+                bottom: 50px;
+                color: #FFFFFF;
+
+                @media only screen and (max-width: 992px) {
+                    left: 28px;
+                }
+            }
+
+            @media only screen and (max-width: 992px) {
+                .image {
+                    width: 100%;
+                    background-repeat: no-repeat;
+
+                }
+            }
+        }
+
+        @media only screen and (max-width: 992px) {
+            flex-direction: column;
+        }
     }
 
-    .right-section2 {
-        .header-section2 {
-            color: #EF6D58;
-            width: 50%;
-            padding-top: 30%;
-            padding-bottom: 20px;
+    .bottom {
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+        width: 100%;
+
+        .bottom-left-image {
+            padding-top: 32px;
+            position: relative;
+
+            .image {
+                width: 570px;
+                height: 416px;
+                background-image: url("../images/dddone.svg");
+            }
+
+            button {
+                @extend %center-image-button;
+                position: absolute;
+                left: 48px;
+                bottom: 130px;
+                cursor: pointer;
+
+                @media only screen and (max-width: 992px) {
+                    left: 28px;
+                }
+            }
+
+            h2 {
+                position: absolute;
+                left: 48px;
+                bottom: 50px;
+                color: #FFFFFF;
+
+                @media only screen and (max-width: 992px) {
+                    left: 28px;
+                }
+            }
+
+            @media only screen and (max-width: 992px) {
+                .image {
+                    width: 100%;
+                    background-repeat: no-repeat;
+                }
+            }
+
         }
 
-        .content {
-            padding-bottom: 26px;
+
+        .bottom-right-image {
+            position: relative;
+            padding-top: 32px;
+
+            .image {
+                width: 570px;
+                height: 416px;
+                background-image: url("../images/handp.svg");
+
+            }
+
+            button {
+                @extend %center-image-button;
+                position: absolute;
+                left: 48px;
+                bottom: 130px;
+                cursor: pointer;
+
+                @media only screen and (max-width: 992px) {
+                    left: 28px;
+                }
+            }
+
+            h2 {
+                position: absolute;
+                left: 48px;
+                bottom: 50px;
+                color: #FFFFFF;
+
+                @media only screen and (max-width: 992px) {
+                    left: 28px;
+                }
+            }
+
+            @media only screen and (max-width: 992px) {
+                .image {
+                    width: 100%;
+                    background-repeat: no-repeat;
+
+                }
+            }
         }
 
-        h2 {
-            width: 417px;
-            font-weight: 800;
-            font-size: 56px;
-            color: #391400;
-        }
-
-        .section2-text {
-            font-weight: 400;
-            font-size: 20px;
-            padding-bottom: 18px;
-        }
-
-        .section2-text2 {
-            font-weight: 400;
-            font-size: 16px;
-            padding-bottom: 34px;
-            line-height: 32px;
-            width: 470px;
+        @media only screen and (max-width: 992px) {
+            flex-direction: column;
+            background-repeat: no-repeat;
 
         }
+    }
 
+
+    .btns {
+        width: 100%;
+        @include flexBox();
+        margin-top: 98px;
+        gap: 10px;
         button {
-            background: #FFFFFF;
-            box-shadow: 0px 3px 9px rgba(57, 20, 0, 0.08);
-            border-radius: 6px;
-            border: none;
-            width: 138px;
+            width: 48px;
             height: 48px;
             font-weight: 900;
             font-size: 14px;
+            line-height: 14px;
+            text-align: center;
+            text-transform: uppercase;
+            background-color: #FFFFFF;
+            border: none;
+            border-radius: 6px;
             cursor: pointer;
-        }
-    }
 
-    @media only screen and (max-width: 992px) {
-
-        flex-direction: column;
-
-
-        .right-section2 {
-            .header-section2 {
-                padding-top: 5%;
-            }
-        }
-
-        .left-section2 {
-            margin-left: 0%;
-        }
-    }
-}
-
-
-// section3
-
-.boxs {
-    display: flex;
-    padding-top: 100px;
-    padding-left: 135px;
-    padding-right: 135px;
-    background-color: #FDF0E9;
-
-
-    .box {
-        width: 100%;
-        height: 176px;
-        border: 2px solid #F3D1BF;
-
-        .faiz,
-        .section3-text {
-            margin: 48px 0 0 40px;
-        }
-
-        .section3-text {
-            margin: 12px 0 0 40px;
-        }
-    }
-}
-
-
-#section3 {
-    display: flex;
-    background-color: #FDF0E9;
-    width: 100%;
-
-
-    .section3-left {
-        padding-left: 135px;
-        margin-top: 140px;
-
-        .header-section3 {
-            color: #EF6D58;
-        }
-
-        .center {
-            width: 448px;
-            height: 96px;
-            font-weight: 800;
-            font-size: 40px;
-            line-height: 48px;
-            margin-top: 17px;
-        }
-
-        .text {
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 32px;
-            width: 470px;
-            height: 68px;
-            margin-top: 31px;
-        }
-
-        .read {
-            color: #391400;
-            margin-top: 28px;
-            color: #391400;
-        }
-    }
-
-    .section3-right {
-        width: 50%;
-        margin-top: 180px;
-        margin-left: 130px;
-
-        .right {
-            width: 100%;
-        }
-
-        .first {
-            margin-top: 32px;
-            display: flex;
-
-            .left {
-                font-weight: 800;
-                font-size: 72px;
-            }
-
-            .text {
-                margin-left: 66px;
-                font-weight: 700;
-                font-size: 24px;
-                color: #391400;
-                @include flexBox()
+            &:hover{
+                background-color: $primary-color;
+                color: #FFFFFF;
             }
         }
     }
 }
+
+
+// section 2 end
