--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,5 +5,6 @@
 @import "./utils/mixins";
 @import "./components/button";
 @import "./layout/header";
+@import "./layout/hisse3";
 @import "./layout/footer";
 @import "./pages/home/home";
