--- a/assets/sass/layout/_hisse3.scss
+++ b/assets/sass/layout/_hisse3.scss
@@ -1,20 +1,21 @@
 #section2 {
-    .container {
-      background-color: $primary-color;
-      .umumi {
-        display: flex;
-  
+  .container {
+    background-color: $primary-color;
+
+    .umumi {
+      display: flex;
+
       .sol {
         h2 {
-          font-family: Epilogue;
           font-weight: 800;
           color: white;
         }
+
         p {
           color: white;
-          font-family: Epilogue;
           margin-top: 30px;
         }
+
         button {
           @extend %primary-button;
           background-color: white;
@@ -22,25 +23,36 @@
           font-weight: 900;
           margin-top: 50px;
         }
+
         margin-top: 60px;
-  
-      
+
+      }
+
+      .sag{
+        margin-left: 300px;
+        @media only screen and (max-width: 992px){
+          margin-left: 0;
+          margin-top: 40px;
+        }
+      }
+
     }
-   
   }
-  }
+
   @media only screen and (max-width:992px) {
-      .umumi{
-          display: block;
-          flex-direction: column-reverse;
-          
-      }
-      .sol{
-          width: 100%;
-      }
-      .img{
-          width: 100%;
-      }
-      
+    .umumi {
+      display: block;
+      flex-direction: column-reverse;
+
+    }
+    .sol {
+      width: 100%;
+      padding-bottom: 40px;
+    }
+
+    .img {
+      width: 100%;
+    }
+
   }
-  }
+}
