--- a/assets/sass/layout/_hisse3.scss
+++ b/assets/sass/layout/_hisse3.scss
@@ -34,6 +34,12 @@
           margin-left: 0;
           margin-top: 40px;
         }
+
+        .img{
+          img{
+            width: 100%;
+          }
+        }
       }
 
     }
